fix(gridster): forcing height of gridster container to auto when in collapsed mode

--- a/src/jquery.gridster.css
+++ b/src/jquery.gridster.css
@@ -16,6 +16,10 @@
     position: absolute;
 }
 
+.gridster.collapsed {
+   height: auto !important;
+}
+
 .gridster.collapsed .gs-w {
     position: static !important;
 }
